--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ふりがなメーカー | 即効版</title>
+    <title>ふりがなメーカー | ひらがな版</title>
+    <script src="https://unpkg.com/wanakana"></script>
     <style>
         body { font-family: sans-serif; max-width: 600px; margin: 40px auto; padding: 20px; background: #f5f5f5; }
         .card { background: white; padding: 25px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
         h1 { font-size: 1.5rem; color: #333; margin-bottom: 20px; text-align: center; }
         textarea { width: 100%; height: 120px; padding: 12px; border: 2px solid #ddd; border-radius: 10px; box-sizing: border-box; font-size: 16px; margin-bottom: 20px; }
-        #output { font-size: 24px; line-height: 2.5; min-height: 100px; border-top: 1px solid #eee; padding-top: 20px; }
-        rt { color: #e74c3c; font-size: 0.5em; }
+        #output { font-size: 24px; line-height: 2.5; min-height: 100px; border-top: 1px solid #eee; padding-top: 20px; word-break: break-all; }
+        rt { color: #e74c3c; font-size: 0.55em; font-weight: bold; }
         .loading-text { font-size: 14px; color: #999; text-align: center; display: none; }
     </style>
 </head>
@@ -31,36 +32,35 @@
 
     input.addEventListener('input', () => {
         clearTimeout(timer);
-        // 入力が終わってから0.5秒後に実行（APIの負荷軽減）
         timer = setTimeout(getFurigana, 500);
     });
 
     async function getFurigana() {
         const text = input.value.trim();
-        if (!text) {
-            output.innerHTML = "";
-            return;
-        }
+        if (!text) { output.innerHTML = ""; return; }
 
         loading.style.display = "block";
 
         try {
-            // Googleの公開APIを利用して読みを取得
             const url = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=ja&tl=ja&dt=rm&q=${encodeURIComponent(text)}`;
             const response = await fetch(url);
             const data = await response.json();
             
-            // data[0][1][3] に読み（ローマ字など）が含まれる
-            // 簡易的な実装として、今回は全体にふりがなを振る形式にします
-            const reading = data[0].map(item => item[3] || "").join(" ");
+            // 各単語の読み（ローマ字）を抽出して結合
+            let fullRomaji = "";
+            if (data[0]) {
+                data[0].forEach(item => {
+                    if (item[3]) fullRomaji += item[3];
+                });
+            }
             
-            if (reading) {
-                // ローマ字で返ってくることが多いので、そのままルビとして表示
-                // ※本来はひらがな変換が必要ですが、まずは「動くこと」を優先します
-                output.innerHTML = `<ruby>${text}<rt>${reading}</rt></ruby>`;
+            if (fullRomaji) {
+                // wanakanaを使ってローマ字をひらがなに変換
+                const hiragana = wanakana.toHiragana(fullRomaji);
+                output.innerHTML = `<ruby>${text}<rt>${hiragana}</rt></ruby>`;
             }
         } catch (e) {
-            output.innerHTML = "エラーが発生しました。ネット接続を確認してください。";
+            output.innerHTML = "エラーが発生しました。再試行してください。";
         } finally {
             loading.style.display = "none";
         }
