--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ふりがなメーカー | 漢字のみ抽出版</title>
+    <title>ふりがなメーカー | 完成版</title>
     <script src="https://unpkg.com/wanakana"></script>
     <style>
         body { font-family: 'Helvetica Neue', Arial, sans-serif; max-width: 700px; margin: 40px auto; padding: 20px; background: #f0f2f5; }
         .card { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 8px 30px rgba(0,0,0,0.08); }
         h1 { font-size: 1.8rem; color: #1a73e8; margin-bottom: 25px; text-align: center; font-weight: 800; }
-        textarea { width: 100%; height: 140px; padding: 15px; border: 2px solid #e0e0e0; border-radius: 12px; box-sizing: border-box; font-size: 18px; transition: 0.3s; line-height: 1.6; }
-        textarea:focus { border-color: #1a73e8; outline: none; box-shadow: 0 0 0 4px rgba(26,115,232,0.1); }
-        #output { font-size: 26px; line-height: 3.2; min-height: 120px; border-top: 1px solid #eee; margin-top: 25px; padding-top: 25px; color: #2c3e50; }
-        /* 漢字以外のルビは非表示、または見た目を調整 */
-        ruby { ruby-align: center; }
-        rt { color: #ff4757; font-size: 0.5em; font-weight: 600; letter-spacing: 0.05em; }
-        .loading-text { font-size: 14px; color: #1a73e8; text-align: center; height: 20px; margin: 10px 0; font-weight: bold; display: none; }
+        textarea { width: 100%; height: 140px; padding: 15px; border: 2px solid #e0e0e0; border-radius: 12px; box-sizing: border-box; font-size: 18px; line-height: 1.6; }
+        #output { font-size: 26px; line-height: 3.5; min-height: 120px; border-top: 1px solid #eee; margin-top: 25px; padding-top: 25px; color: #2c3e50; }
+        rt { color: #ff4757; font-size: 0.5em; font-weight: 600; }
+        .loading-text { font-size: 14px; color: #1a73e8; text-align: center; height: 20px; margin: 10px 0; display: none; }
     </style>
 </head>
 <body>
 
 <div class="card">
     <h1>ふりがなメーカー</h1>
-    <textarea id="input" placeholder="読みを知りたい文章をここに貼ってください"></textarea>
-    <div id="loading" class="loading-text">読みを取得中...</div>
+    <textarea id="input" placeholder="文章を貼り付けてください..."></textarea>
+    <div id="loading" class="loading-text">解析中...</div>
     <div id="output"></div>
 </div>
 
@@ -33,12 +30,11 @@
     const loading = document.getElementById('loading');
     let timer;
 
-    // ブラウザ標準の分割機能を使用
     const segmenter = new Intl.Segmenter('ja-JP', { granularity: 'word' });
 
     input.addEventListener('input', () => {
         clearTimeout(timer);
-        timer = setTimeout(processText, 600);
+        timer = setTimeout(processText, 500);
     });
 
     async function processText() {
@@ -52,19 +48,25 @@
         for (const segment of segments) {
             const word = segment.segment;
             
-            // 漢字が含まれている場合のみ、APIに読みを聞きに行く
             if (/[\u4E00-\u9FFF]/.test(word)) {
                 try {
                     const url = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=ja&tl=ja&dt=rm&q=${encodeURIComponent(word)}`;
                     const response = await fetch(url);
                     const data = await response.json();
                     
-                    let romaji = "";
-                    if (data[0] && data[0][1]) romaji = data[0][1][3];
-                    else if (data[0] && data[0][0]) romaji = data[0][0][3];
+                    // APIの結果から読み（ローマ字）を探す
+                    let rawReading = "";
+                    if (data[0]) {
+                        data[0].forEach(parts => {
+                            if (parts[3]) rawReading += parts[3];
+                        });
+                    }
 
-                    if (romaji) {
-                        const hira = wanakana.toHiragana(romaji);
+                    if (rawReading) {
+                        // 【ここが重要】特殊な記号付きローマ字（ō, ū等）を通常のアルファベットに置換
+                        const cleanRomaji = rawReading.normalize('NFD').replace(/[\u0300-\u036f]/g, '');
+                        // wanakanaでひらがなに変換
+                        const hira = wanakana.toHiragana(cleanRomaji);
                         finalHtml += `<ruby>${word}<rt>${hira}</rt></ruby>`;
                     } else {
                         finalHtml += word;
@@ -73,7 +75,6 @@
                     finalHtml += word;
                 }
             } else {
-                // 漢字以外（ひらがな、カタカナ、記号）はそのまま表示
                 finalHtml += word;
             }
         }
