--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh; /* 画面ぴったりに使う */
+            height: 100vh;
             color: #333;
         }
 
@@ -22,14 +22,13 @@
         header {
             flex: 1;
             display: flex;
-            padding: 20px;
+            padding: 15px 20px;
             gap: 20px;
             background-color: #eef9ff;
-            border-bottom: 3px solid #a6dcef;
+            border-bottom: 2px solid #a6dcef;
             box-sizing: border-box;
         }
 
-        /* タイトルと注意書き */
         .info-pane {
             flex: 1;
             display: flex;
@@ -39,24 +38,22 @@
 
         h1 {
             color: #1a73e8;
-            margin: 0 0 10px 0;
-            font-size: 1.8rem;
+            margin: 0 0 8px 0;
+            font-size: 1.5rem;
         }
 
         .notice {
             background: white;
-            padding: 12px;
+            padding: 10px;
             border-radius: 10px;
             border: 2px solid #ffcc00;
-            font-size: 0.95rem;
-            line-height: 1.5;
+            font-size: 0.85rem; /* 少し小さめに */
+            line-height: 1.6;
         }
 
-        /* 入力エリア */
         .input-pane {
             flex: 1;
             display: flex;
-            flex-direction: column;
         }
 
         textarea {
@@ -64,9 +61,9 @@
             height: 100%;
             border: 2px solid #a6dcef;
             border-radius: 12px;
-            padding: 15px;
+            padding: 12px;
             font-family: inherit;
-            font-size: 18px;
+            font-size: 16px; /* 少し小さめに */
             resize: none;
             box-sizing: border-box;
             outline: none;
@@ -75,7 +72,7 @@
         /* --- 下の部分 (2) --- */
         main {
             flex: 2;
-            padding: 25px;
+            padding: 20px 40px; /* 左右の余白を少し広めに */
             overflow-y: auto;
             background: white;
             box-sizing: border-box;
@@ -83,25 +80,23 @@
         }
 
         #output {
-            font-size: 32px; /* 読む部分なのでさらに大きく */
-            line-height: 3.8;
+            font-size: 24px; /* 大きすぎず 読みやすいサイズに */
+            line-height: 2.4; /* 行間を いい感じに つめました */
             word-break: break-all;
         }
 
-        /* ルビのデザイン */
         rt {
             color: #d9534f;
             font-size: 0.5em;
             font-weight: normal;
             cursor: pointer;
-            padding: 0 3px;
+            padding: 0 2px;
         }
-        rt:hover { background: #ffebeb; border-radius: 4px; }
+        rt:hover { background: #ffebeb; border-radius: 3px; }
 
-        /* ボタンなど */
         .tools {
             position: fixed;
-            bottom: 20px;
+            bottom: 15px;
             right: 20px;
             display: flex;
             gap: 10px;
@@ -111,24 +106,23 @@
             background: #ff9f43;
             color: white;
             border: none;
-            padding: 12px 25px;
+            padding: 10px 20px;
             border-radius: 50px;
             font-family: inherit;
             font-weight: bold;
             cursor: pointer;
-            box-shadow: 0 4px 0 #e67e22;
-            font-size: 1rem;
+            box-shadow: 0 3px 0 #e67e22;
+            font-size: 0.9rem;
         }
         .btn:active { transform: translateY(2px); box-shadow: none; }
-        .btn.copy { background: #1a73e8; box-shadow: 0 4px 0 #0d47a1; }
+        .btn.copy { background: #1a73e8; box-shadow: 0 3px 0 #0d47a1; }
 
         #status {
             position: absolute;
             top: 5px;
             right: 20px;
-            font-size: 14px;
+            font-size: 12px;
             color: #1a73e8;
-            font-weight: bold;
         }
     </style>
 </head>
@@ -138,12 +132,14 @@
         <div class="info-pane">
             <h1>✨ ふりがなマジック</h1>
             <div class="notice">
-                ⚠️ <strong>ちゅうい：</strong>つけられた ふりがなは、まちがっているときがあります。おかしいなと思ったら、先生や友達に聞いてみてね。<br>
-                💡 <strong>ヒント：</strong>まちがっているふりがなは、クリックすると自分でなおすこともできるよ！
+                ⚠️ <strong>ちゅうい：</strong><br>
+                つけられた ふりがなは、まちがっている ときが あります。おかしいなと おもったら、せんせいや ともだちに きいて みてね。<br>
+                💡 <strong>ヒント：</strong><br>
+                まちがっている ふりがなは、クリックすると じぶんで なおすことも できるよ！
             </div>
         </div>
         <div class="input-pane">
-            <textarea id="input" placeholder="ここに、ふりがなをつけたい言葉（ことば）をはりつけてね！"></textarea>
+            <textarea id="input" placeholder="ここに、ふりがなを つけたい ことばを はりつけてね！"></textarea>
         </div>
     </header>
 
@@ -153,8 +149,8 @@
     </main>
 
     <div class="tools">
-        <button class="btn copy" onclick="copyOutput()">📋 ふりがなつきでコピー</button>
-        <button class="btn" onclick="clearAll()">🔄 ぜんぶ消す</button>
+        <button class="btn copy" onclick="copyOutput()">📋 ふりがなつきで コピー</button>
+        <button class="btn" onclick="clearAll()">🔄 ぜんぶけす</button>
     </div>
 
     <script>
@@ -168,7 +164,7 @@
 
         input.addEventListener('input', () => {
             clearTimeout(timer);
-            status.innerText = "✨ まほうを かけています...";
+            status.innerText = "まほうを かけています...";
             timer = setTimeout(processText, 600);
         });
 
@@ -218,7 +214,7 @@
             selection.addRange(range);
             document.execCommand('copy');
             selection.removeAllRanges();
-            alert("ふりがなつきでコピーしたよ！");
+            alert("コピーしたよ！");
         }
 
         function clearAll() {
