--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             for (let k = 0; k < segments.length; k++) {
                 let word = segments[k].segment;
                 let prevWord = k > 0 ? segments[k-1].segment : "";
+                let nextWord = k < segments.length - 1 ? segments[k+1].segment : ""; // 次の単語を先読み
                 
                 if (/[\u4E00-\u9FFF\d]/.test(word)) {
-                    // 1. 漢字とそれ以外（ひらがな・カタカナ）を分離
                     let match = word.match(/^([\u4E00-\u9FFF\d々]+)(.*)$/);
                     let kanjiPart = word;
                     let okuriganaPart = "";
@@ -136,14 +136,20 @@
                     let kanjiReading = "";
                     let isForced = false;
 
-                    // ★【ここが新機能】大＋カタカナ語 攻略ルール
-                    // 「大」のあとにカタカナ（例：ブーム）が続いていたら、APIに聞かずに「だい」に決定！
-                    if (kanjiPart === '大' && /^[ァ-ヶー]+$/.test(okuriganaPart)) {
-                        kanjiReading = 'だい';
-                        isForced = true;
+                    // ★【改訂版】大＋カタカナ語 攻略ルール
+                    if (kanjiPart === '大') {
+                        // パターン1: 「大ヒット」が1つの単語になっている場合
+                        if (/^[ァ-ヶー]+$/.test(okuriganaPart)) {
+                            kanjiReading = 'だい';
+                            isForced = true;
+                        } 
+                        // パターン2: 「大」と「ヒット」が切れている場合（ここを追加！）
+                        else if (okuriganaPart === "" && /^[ァ-ヶー]+$/.test(nextWord)) {
+                            kanjiReading = 'だい';
+                            isForced = true;
+                        }
                     }
 
-                    // 2. 辞書チェック
                     if (!isForced) {
                         if (hardDictionary[word]) {
                              kanjiReading = hardDictionary[word];
@@ -167,7 +173,6 @@
                         } else {
                             let fullReading = await getReading(word);
                             
-                            // 読みから送り仮名分をカット
                             if (fullReading.endsWith(okuriganaPart)) {
                                 kanjiReading = fullReading.substring(0, fullReading.length - okuriganaPart.length);
                             } else {
@@ -177,7 +182,6 @@
                                 }
                             }
 
-                            // 読み間違い是正フィルター
                             for (let correction of correctionMap) {
                                 if (kanjiPart === correction.kanji && kanjiReading === correction.wrong) {
                                     kanjiReading = correction.right;
@@ -187,11 +191,10 @@
                         }
                     }
 
-                    // 1文字動詞の安全策
                     const simpleVerbFixes = {'言':'い','知':'し','出':'で','見':'み','行':'い','読':'よ','書':'か','思':'おも'};
                     if (!isForced && kanjiPart.length === 1 && simpleVerbFixes[kanjiPart] && kanjiReading !== simpleVerbFixes[kanjiPart]) {
-                        // 「大」はカタカナチェックで処理済みなので、ここでは除外される
-                        if (okuriganaPart.length > 0) {
+                        // 「大」は上のルールで処理済みなので除外
+                        if (kanjiPart !== '大' && okuriganaPart.length > 0) {
                             kanjiReading = simpleVerbFixes[kanjiPart];
                         }
                     }
